Update execution counts and outputs in TensorFlow notebook

--- a/test_tensorflow.ipynb
+++ b/test_tensorflow.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "12767204",
    "metadata": {},
    "outputs": [
@@ -58,11 +58,12 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[ 1.1915033   1.0459775  -1.6179084 ]\n",
-      " [-0.63551646 -1.5098503   0.02186147]], shape=(2, 3), dtype=float32)\n",
+      "[[-0.26104233  0.7397498   1.2324532 ]\n",
+      " [ 1.3516948   1.794302   -0.8276496 ]], shape=(2, 3), dtype=float32)\n",
+      "\n",
       "tf.Tensor(\n",
-      "[[0.89497983 0.4174677  0.8754375 ]\n",
-      " [0.35161197 0.43895936 0.3010589 ]], shape=(2, 3), dtype=float32)\n"
+      "[[0.4292227  0.39740944 0.6240401 ]\n",
+      " [0.05455685 0.09075594 0.0459131 ]], shape=(2, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -72,17 +73,56 @@
     "random_normal = tf.random.normal([2, 3], mean=0.0, stddev=1.0)\n",
     "print(random_normal)\n",
     "\n",
+    "print()\n",
+    "\n",
     "random_uniform = tf.random.uniform([2, 3], minval=0, maxval=1)\n",
     "print(random_uniform)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1964d30d",
+   "execution_count": 12,
+   "id": "b844a640",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1 2 3]\n",
+      " [4 5 6]], shape=(2, 3), dtype=int32)\n",
+      "\n",
+      "tf.Tensor(\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]], shape=(3, 2), dtype=int32)\n",
+      "\n",
+      "tf.Tensor(\n",
+      "[[2 3]\n",
+      " [5 6]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Original tensor\n",
+    "original_tensor = tf.constant([[1, 2, 3], [4, 5, 6]])\n",
+    "print(original_tensor)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Reshape the tensor to a different shape\n",
+    "reshaped_tensor = tf.reshape(original_tensor, [3, 2])\n",
+    "print(reshaped_tensor)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# slice the tensor\n",
+    "sliced_tensor = tf.slice(original_tensor, [0, 1], [2, 2])\n",
+    "print(sliced_tensor)"
+   ]
   }
  ],
  "metadata": {
